--- a/css/style.css
+++ b/css/style.css
@@ -31,4 +31,9 @@
   text-shadow: 10px 10px 16px black;
   color: white;
 }
+
+#container2 {
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+}
 /*# sourceMappingURL=style.css.map */
