--- a/css/style.scss
+++ b/css/style.scss
@@ -26,3 +26,8 @@
 
     }
 }
+#container2 {
+    background-color: #FBAB7E;
+background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+
+}
