--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 
 .container {
   width: 100vw;
-  height: 100vh;
   background-color: red;
 }
 
@@ -35,5 +34,34 @@
 #container2 {
   background-color: #FBAB7E;
   background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+  height: 0vh;
+}
+
+nav ul {
+  height: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 2em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: black;
+}
+
+nav ul li {
+  list-style: none;
+}
+
+nav ul li a {
+  text-decoration: none;
+  margin: 0 0.5em;
+  font-size: 2em;
+  color: white;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+nav ul li a:hover {
+  color: purple;
 }
 /*# sourceMappingURL=style.css.map */
